--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 BOT_TOKEN=7894180424:AAFS-wpGXlS2Zy6VANlnqFgbxcd-Sa-SZ-4
 DATABASE_URL=postgres://postgres:123456@localhost:5432/finbot?schema=public
+# DATABASE_URL=postgres://developer:dwZRS.4Qcfz_N8W@postgresql-developer.alwaysdata.net/developer_finbot?schema=public
+
