--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BOT_TOKEN=7894180424:AAFS-wpGXlS2Zy6VANlnqFgbxcd-Sa-SZ-4
+# BOT_TOKEN=8273452596:AAEOBLo7GmHJSgRnY0tGAdImy44IvnjFgRI
 DATABASE_URL=postgres://postgres:123456@localhost:5432/finbot?schema=public
 # DATABASE_URL=postgres://developer:dwZRS.4Qcfz_N8W@postgresql-developer.alwaysdata.net/developer_finbot?schema=public
 
